--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 	<p>I will do something in this place~</p>
 	<p>	http://cssoul.github.io/share/</p>
 	<p><a href="go://vip">登录</a></p>
+    <p><a href="go://index">登录</a></p>
 </body>
 </html>
