--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h1>Hello World!</h1>
 	<p>I will do something in this place~</p>
 	<p>	http://cssoul.github.io/share/</p>
-	<p><a href="go://vip">登录</a></p>
-    <p><a href="go://index">登录</a></p>
+	<p><a href="mgj://collocationEdit">登录</a></p>
+    <p><a href="mgj://collocationList">登录</a></p>
 </body>
 </html>
