--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<h1>Hello World!</h1>
 	<p>I will do something in this place~</p>
 	<p>	http://cssoul.github.io/share/</p>
-    <p><a href="http://m.mogujie.com/go/goods/detail/1jy5imu">biubiubiu~</a></p>
+    <p><a href="go://login">biubiubiu~</a></p>
+	
+	<p onclick="window.location.href='go://login'">登录</p>
 </body>
 </html>
