--- a/index.html
+++ b/index.html
@@ -15,5 +15,62 @@
     <p><a href="go://login">biubiubiu~</a></p>
 	
 	<p onclick="window.location.href='go://login'">登录</p>
+	
+	<script>
+	var imgUrl = 'https://s2.mogucdn.com/mlcdn/c45406/170401_0caaa1d6g0731699i5h9cb9g1jl97_750x360.jpg_200x200.jpg';  // 分享后展示的一张图片
+   	var lineLink = 'http://www.baidu.com'; // 点击分享后跳转的页面地址
+   	var descContent = "小灰博客，敬请访问！";  // 分享后的描述信息
+   	var shareTitle = '小灰博客';  // 分享后的标题
+	var appid = '';  // 应用id,如果有可以填，没有就留空
+        function shareFriend() {
+            WeixinJSBridge.invoke('sendAppMessage',{
+                "appid": appid,
+                "img_url": imgUrl,
+                "img_width": "200",
+                "img_height": "200",
+                "link": lineLink,
+                "desc": descContent,
+                "title": shareTitle
+            }, function(res) {
+          //_report('send_msg', res.err_msg);  // 这是回调函数，必须注释掉
+            })
+        }
+        function shareTimeline() {
+            WeixinJSBridge.invoke('shareTimeline',{
+                "img_url": imgUrl,
+                "img_width": "200",
+                "img_height": "200",
+                "link": lineLink,
+                "desc": descContent,
+                "title": shareTitle
+            }, function(res) {
+         //_report('timeline', res.err_msg); // 这是回调函数，必须注释掉
+            });
+        }
+        function shareWeibo() {
+            WeixinJSBridge.invoke('shareWeibo',{
+                "content": descContent,
+                "url": lineLink,
+            }, function(res) {
+                //_report('weibo', res.err_msg);
+            });
+        }
+   // 当微信内置浏览器完成内部初始化后会触发WeixinJSBridgeReady事件。
+   document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
+            // 发送给好友
+            WeixinJSBridge.on('menu:share:appmessage', function(argv){
+                shareFriend();
+            });
+            // 分享到朋友圈
+            WeixinJSBridge.on('menu:share:timeline', function(argv){
+                shareTimeline();
+            });
+            // 分享到微博
+            WeixinJSBridge.on('menu:share:weibo', function(argv){
+                shareWeibo();
+            });
+        }, false);
+		
+	</script>
 </body>
 </html>
