--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"  />
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta content="black" name="apple-mobile-web-app-status-bar-style" />
+	<meta name="sharecontent" data-msg-img="你的缩略图地址" data-msg-title="你的标题" data-msg-content="你的简介" data-msg-callBack="" data-line-img="你的缩略图地址" data-line-title="你的标题" data-line-callBack=""/>
 </head>
 <body scroll="none">
 	<h1>Hello World!</h1>
@@ -18,9 +19,9 @@
 	
 	<script>
 	var imgUrl = 'https://s2.mogucdn.com/mlcdn/c45406/170401_0caaa1d6g0731699i5h9cb9g1jl97_750x360.jpg_200x200.jpg';  // 分享后展示的一张图片
-   	var lineLink = 'http://www.baidu.com'; // 点击分享后跳转的页面地址
-   	var descContent = "小灰博客，敬请访问！";  // 分享后的描述信息
-   	var shareTitle = '小灰博客';  // 分享后的标题
+   	var lineLink = 'http://www.cssoul.com'; // 点击分享后跳转的页面地址
+   	var descContent = "天明的博客，敬请访问！";  // 分享后的描述信息
+   	var shareTitle = '天明的博客';  // 分享后的标题
 	var appid = '';  // 应用id,如果有可以填，没有就留空
         function shareFriend() {
             WeixinJSBridge.invoke('sendAppMessage',{
