--- a/demo/mockup/index.html
+++ b/demo/mockup/index.html
@@ -37,6 +37,9 @@
 				},{
 	            	"componentId": "moreHeader",
 	            	"componentCover":"http://s2.mogucdn.com/mlcdn/c45406/170503_71h0gle39ihfib9hgi31l10bd8176_750x100.jpg"
+	            },{
+	            	"componentId": "keywordsHeader",
+	            	"componentCover":"http://s2.mogucdn.com/mlcdn/c45406/170509_8bd9206bebc4a71bcg14a0dbj973j_750x85.jpg"
 	            } ,
 	            {
 	             	"componentId": "featureEntries",
@@ -72,6 +75,14 @@
 	            {
 	             	"componentId": "circleBanner",
 	             	"componentCover":"http://s2.mogucdn.com/mlcdn/c45406/170503_2d95aigbgki5dfd05acc97j3jg020_750x450.jpg"
+	            },
+	            {
+	             	"componentId": "goodItems",
+	             	"componentCover":"http://s2.mogucdn.com/mlcdn/c45406/170510_7fe5ia7g7j5e30f01i7fkgbkag534_750x421.jpg"
+	            },
+	            {
+	             	"componentId": "squareItems",
+	             	"componentCover":"http://s2.mogucdn.com/mlcdn/c45406/170510_4gidk1l9k3i2c9k3252h3532l7255_750x380.jpg"
 	            },
 	            {
 	             	"componentId": "recommendEntries",
